@@ -1,7 +1,8 @@
 include ../Makefile.inc
 
 CC      = /usr/bin/gcc
-SRCS    = calc_client.c calc_server.c upcased.c upcase.c syslog_demo.c 
+SRCS    = spl_calc_client.c spl_calc_server.c upcased.c upcase.c \
+          syslog_demo.c 
 
 OBJS    = $(patsubst %.c,%.o,$(SRCS))
 EXECS   = $(patsubst %.c,%,$(SRCS)) spl_calc spl_calcd
@@ -20,14 +21,14 @@ cleanall: clean
 clean:
 	-rm -f $(OBJS)
 
-spl_calc    : calc_client
-	@mv calc_client spl_calc
+spl_calc    : spl_calc_client
+	@mv spl_calc_client spl_calc
 	
-spl_calcd   : calc_server
-	@mv calc_server spl_calcd
+spl_calcd   : spl_calc_server
+	@mv spl_calc_server spl_calcd
 
-upcased.o       : upcased.c upcase.h  $(SPL_LIB) $(SPL_HDRS)
-upcase.o        : upcase.c upcase.h  $(SPL_LIB) $(SPL_HDRS)
-calc_client.o   : calc_client.c spl_calc.h  $(SPL_LIB) $(SPL_HDRS)
-calc_server.o   : calc_server.c spl_calc.h  $(SPL_LIB) $(SPL_HDRS)
-syslog_demo.o   : syslog_demo.c  $(SPL_LIB) $(SPL_HDRS)
+upcased.o         : upcased.c upcase.h  $(SPL_LIB) $(SPL_HDRS)
+upcase.o          : upcase.c upcase.h  $(SPL_LIB) $(SPL_HDRS)
+spl_calc_client.o : spl_calc_client.c spl_calc.h  $(SPL_LIB) $(SPL_HDRS)
+spl_calc_server.o : spl_calc_server.c spl_calc.h  $(SPL_LIB) $(SPL_HDRS)
+syslog_demo.o     : syslog_demo.c  $(SPL_LIB) $(SPL_HDRS)
